--- a/Clash-Full.ini
+++ b/Clash-Full.ini
@@ -32,8 +32,8 @@ custom_proxy_group=➡️ 国内`select`[]DIRECT`[]香港-选择`[]日本-选择
 custom_proxy_group=👯‍♂️ TikTok`select`[]日本-选择`[]DIRECT`[]所有-手动`[]所有-自动`[]港台日新韩-自动`[]台日新韩-自动`[]香港-自动`[]台湾-自动`[]日本-自动`[]新加坡-自动`[]韩国-自动`[]美国-自动`[]其他-自动`[]REJECT
 custom_proxy_group=🎞️ YouTube`select`[]澳门`[]莫斯科`[]香港-选择`[]日本-选择`[]DIRECT`[]所有-手动`[]所有-自动`[]港台日新韩-自动`[]台日新韩-自动`[]香港-自动`[]台湾-自动`[]日本-自动`[]新加坡-自动`[]韩国-自动`[]美国-自动`[]其他-自动`[]REJECT
 custom_proxy_group=🙋 Telegram`select`[]日本-选择`[]DIRECT`[]所有-手动`[]所有-自动`[]港台日新韩-自动`[]台日新韩-自动`[]香港-自动`[]台湾-自动`[]日本-自动`[]新加坡-自动`[]韩国-自动`[]美国-自动`[]其他-自动`[]REJECT
-custom_proxy_group=✨ AI1`select`[]DIRECT`[]台湾-自动`[]所有-手动`[]所有-自动`[]港台日新韩-自动`[]台日新韩-自动`[]香港-自动`[]日本-自动`[]新加坡-自动`[]韩国-自动`[]美国-自动`[]其他-自动`[]REJECT
-custom_proxy_group=✨ AI2`select`[]DIRECT`[]新加坡-自动`[]所有-手动`[]所有-自动`[]港台日新韩-自动`[]台日新韩-自动`[]香港-自动`[]台湾-自动`[]日本-自动`[]韩国-自动`[]美国-自动`[]其他-自动`[]REJECT
+custom_proxy_group=✨ AI1`select`[]台湾-自动`[]所有-手动`[]所有-自动`[]港台日新韩-自动`[]台日新韩-自动`[]香港-自动`[]日本-自动`[]新加坡-自动`[]韩国-自动`[]美国-自动`[]其他-自动`[]REJECT
+custom_proxy_group=✨ AI2`select`[]新加坡-自动`[]所有-手动`[]所有-自动`[]港台日新韩-自动`[]台日新韩-自动`[]香港-自动`[]台湾-自动`[]日本-自动`[]韩国-自动`[]美国-自动`[]其他-自动`[]REJECT
 custom_proxy_group=📘 GitHub`select`[]港台日新韩-自动`[]DIRECT`[]所有-手动`[]所有-自动`[]港台日新韩-自动`[]台日新韩-自动`[]香港-自动`[]台湾-自动`[]日本-自动`[]新加坡-自动`[]韩国-自动`[]美国-自动`[]其他-自动`[]REJECT
 custom_proxy_group=🕊️ Twitter(X)`select`[]日本-选择`[]DIRECT`[]所有-手动`[]所有-自动`[]港台日新韩-自动`[]台日新韩-自动`[]香港-自动`[]台湾-自动`[]日本-自动`[]新加坡-自动`[]韩国-自动`[]美国-自动`[]其他-自动`[]REJECT
 custom_proxy_group=🗣️ Facebook`select`[]日本-选择`[]DIRECT`[]所有-手动`[]所有-自动`[]港台日新韩-自动`[]台日新韩-自动`[]香港-自动`[]台湾-自动`[]日本-自动`[]新加坡-自动`[]韩国-自动`[]美国-自动`[]其他-自动`[]REJECT
