--- a/Clash-Full.ini
+++ b/Clash-Full.ini
@@ -44,9 +44,9 @@ custom_proxy_group=Ⓜ️ Microsoft`select`[]台湾-自动`[]香港-选择`[]日
 custom_proxy_group=🎮 Steam`select`[]台湾-自动`[]香港-选择`[]日本-选择`[]DIRECT`[]所有-手动`[]所有-自动`[]港台日新韩-自动`[]台日新韩-自动`[]香港-自动`[]日本-自动`[]新加坡-自动`[]韩国-自动`[]美国-自动`[]其他-自动`[]REJECT
 custom_proxy_group=🕹️ Game`select`[]台湾-自动`[]香港-选择`[]日本-选择`[]DIRECT`[]所有-手动`[]所有-自动`[]港台日新韩-自动`[]台日新韩-自动`[]香港-自动`[]日本-自动`[]新加坡-自动`[]韩国-自动`[]美国-自动`[]其他-自动`[]REJECT
 custom_proxy_group=🎞️ YouTube`select`[]香港-自动`[]香港-选择`[]日本-选择`[]DIRECT`[]所有-手动`[]所有-自动`[]港台日新韩-自动`[]台日新韩-自动`[]台湾-自动`[]日本-自动`[]新加坡-自动`[]韩国-自动`[]美国-自动`[]其他-自动`[]REJECT
-custom_proxy_group=📺 Disney`select`[]新加坡-自动`[]香港-选择`[]日本-选择`[]DIRECT`[]所有-手动`[]所有-自动`[]港台日新韩-自动`[]台日新韩-自动`[]香港-自动`[]台湾-自动`[]日本-自动`[]韩国-自动`[]美国-自动`[]其他-自动`[]REJECT
-custom_proxy_group=🎥 Netflix`select`[]新加坡-自动`[]香港-选择`[]日本-选择`[]DIRECT`[]所有-手动`[]所有-自动`[]港台日新韩-自动`[]台日新韩-自动`[]香港-自动`[]台湾-自动`[]日本-自动`[]韩国-自动`[]美国-自动`[]其他-自动`[]REJECT
-custom_proxy_group=🎬 HBO`select`[]新加坡-自动`[]香港-选择`[]日本-选择`[]DIRECT`[]所有-手动`[]所有-自动`[]港台日新韩-自动`[]台日新韩-自动`[]香港-自动`[]台湾-自动`[]日本-自动`[]韩国-自动`[]美国-自动`[]其他-自动`[]REJECT
+custom_proxy_group=📺 Disney`select`[]台湾-自动`[]新加坡-自动`[]香港-选择`[]日本-选择`[]DIRECT`[]所有-手动`[]所有-自动`[]港台日新韩-自动`[]台日新韩-自动`[]香港-自动`[]日本-自动`[]韩国-自动`[]美国-自动`[]其他-自动`[]REJECT
+custom_proxy_group=🎥 Netflix`select`[]台湾-自动`[]新加坡-自动`[]香港-选择`[]日本-选择`[]DIRECT`[]所有-手动`[]所有-自动`[]港台日新韩-自动`[]台日新韩-自动`[]香港-自动`[]日本-自动`[]韩国-自动`[]美国-自动`[]其他-自动`[]REJECT
+custom_proxy_group=🎬 HBO`select`[]台湾-自动`[]新加坡-自动`[]香港-选择`[]日本-选择`[]DIRECT`[]所有-手动`[]所有-自动`[]港台日新韩-自动`[]台日新韩-自动`[]香港-自动`[]日本-自动`[]韩国-自动`[]美国-自动`[]其他-自动`[]REJECT
 custom_proxy_group=🎵 Spotify`select`[]美国-自动`[]香港-选择`[]日本-选择`[]DIRECT`[]所有-手动`[]所有-自动`[]港台日新韩-自动`[]台日新韩-自动`[]香港-自动`[]台湾-自动`[]日本-自动`[]新加坡-自动`[]韩国-自动`[]其他-自动`[]REJECT
 custom_proxy_group=🌍 国外`select`[]香港-选择`[]日本-选择`[]DIRECT`[]所有-手动`[]所有-自动`[]港台日新韩-自动`[]台日新韩-自动`[]香港-自动`[]台湾-自动`[]日本-自动`[]新加坡-自动`[]韩国-自动`[]美国-自动`[]其他-自动`[]REJECT
 custom_proxy_group=➡️ 国内`select`[]DIRECT`[]所有-手动`[]所有-自动`[]港台日新韩-自动`[]台日新韩-自动`[]香港-自动`[]台湾-自动`[]日本-自动`[]新加坡-自动`[]韩国-自动`[]美国-自动`[]其他-自动`[]REJECT
