--- a/Clash-Full.ini
+++ b/Clash-Full.ini
@@ -1,4 +1,5 @@
 ;1、域名组
+ruleset=⏱️ 检测,https://raw.githubusercontent.com/liandu2024/clash/refs/heads/main/list/Check.list
 ruleset=✨ AI1,https://raw.githubusercontent.com/liandu2024/clash/refs/heads/main/list/AI.list
 ruleset=✨ AI2,https://raw.githubusercontent.com/liandu2024/clash/refs/heads/main/list/AI2.list
 ruleset=📘 GitHub,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/GitHub/GitHub.list
@@ -31,11 +32,12 @@ ruleset=➡️ 国内,[]FINAL
 ;2、策略组（域名组-节点组）
 custom_proxy_group=香港-选择`select`(广港|香港|HK|Hong Kong|🇭🇰|HongKong)`http://www.gstatic.com/generate_204`180,5,100
 custom_proxy_group=日本-选择`select`(广日|日本|JP|川日|东京|大阪|泉日|埼玉|沪日|深日|🇯🇵|Japan)`http://www.gstatic.com/generate_204`180,5,100
-custom_proxy_group=✨ AI1`select`[]台湾-自动`[]香港-选择`[]日本-选择`[]DIRECT`[]所有-手动`[]所有-自动`[]港台日新韩-自动`[]台日新韩-自动`[]香港-自动`[]日本-自动`[]新加坡-自动`[]韩国-自动`[]美国-自动`[]其他-自动`[]REJECT
-custom_proxy_group=✨ AI2`select`[]新加坡-自动`[]DIRECT`[]所有-手动`[]所有-自动`[]港台日新韩-自动`[]台日新韩-自动`[]香港-自动`[]台湾-自动`[]日本-自动`[]韩国-自动`[]美国-自动`[]其他-自动`[]REJECT
+custom_proxy_group=⏱️ 检测`select`[]香港-自动`[]DIRECT`[]所有-手动`[]所有-自动`[]台湾-自动`[]日本-自动`[]新加坡-自动`[]韩国-自动`[]美国-自动`[]其他-自动`[]REJECT
 custom_proxy_group=📘 GitHub`select`[]香港-选择`[]日本-选择`[]DIRECT`[]所有-手动`[]所有-自动`[]港台日新韩-自动`[]台日新韩-自动`[]香港-自动`[]台湾-自动`[]日本-自动`[]新加坡-自动`[]韩国-自动`[]美国-自动`[]其他-自动`[]REJECT
 custom_proxy_group=👯‍♂️ TikTok`select`[]日本-选择`[]DIRECT`[]所有-手动`[]所有-自动`[]港台日新韩-自动`[]台日新韩-自动`[]香港-自动`[]台湾-自动`[]日本-自动`[]新加坡-自动`[]韩国-自动`[]美国-自动`[]其他-自动`[]REJECT
 custom_proxy_group=🙋 Telegram`select`[]香港-选择`[]日本-选择`[]DIRECT`[]所有-手动`[]所有-自动`[]港台日新韩-自动`[]台日新韩-自动`[]香港-自动`[]台湾-自动`[]日本-自动`[]新加坡-自动`[]韩国-自动`[]美国-自动`[]其他-自动`[]REJECT
+custom_proxy_group=✨ AI1`select`[]台湾-自动`[]香港-选择`[]日本-选择`[]DIRECT`[]所有-手动`[]所有-自动`[]港台日新韩-自动`[]台日新韩-自动`[]香港-自动`[]日本-自动`[]新加坡-自动`[]韩国-自动`[]美国-自动`[]其他-自动`[]REJECT
+custom_proxy_group=✨ AI2`select`[]新加坡-自动`[]DIRECT`[]所有-手动`[]所有-自动`[]港台日新韩-自动`[]台日新韩-自动`[]香港-自动`[]台湾-自动`[]日本-自动`[]韩国-自动`[]美国-自动`[]其他-自动`[]REJECT
 custom_proxy_group=🕊️ Twitter(X)`select`[]日本-选择`[]香港-选择`[]DIRECT`[]所有-手动`[]所有-自动`[]港台日新韩-自动`[]台日新韩-自动`[]香港-自动`[]台湾-自动`[]日本-自动`[]新加坡-自动`[]韩国-自动`[]美国-自动`[]其他-自动`[]REJECT
 custom_proxy_group=🗣️ Facebook`select`[]日本-选择`[]香港-选择`[]DIRECT`[]所有-手动`[]所有-自动`[]港台日新韩-自动`[]台日新韩-自动`[]香港-自动`[]台湾-自动`[]日本-自动`[]新加坡-自动`[]韩国-自动`[]美国-自动`[]其他-自动`[]REJECT
 custom_proxy_group=🌳 Amazon`select`[]美国-自动`[]香港-选择`[]日本-选择`[]DIRECT`[]所有-手动`[]所有-自动`[]港台日新韩-自动`[]台日新韩-自动`[]香港-自动`[]台湾-自动`[]日本-自动`[]新加坡-自动`[]韩国-自动`[]其他-自动`[]REJECT
