--- a/clash-all-globe.ini
+++ b/clash-all-globe.ini
@@ -39,34 +39,38 @@ ruleset=➡️ 国内,https://github.moeyy.xyz/https://raw.githubusercontent.com
 ruleset=🌍 国外,[]FINAL
 
 ;2、策略组（域名组-节点组）
+custom_proxy_group=香港-选择`select`(广港|香港|HK|Hong Kong|🇭🇰|HongKong)`http://www.gstatic.com/generate_204`180,5,100
+custom_proxy_group=日本-选择`select`(广日|日本|JP|川日|东京|大阪|泉日|埼玉|沪日|深日|🇯🇵|Japan)`http://www.gstatic.com/generate_204`180,5,100
+custom_proxy_group=所有-手动`select`.*
+custom_proxy_group=🌍 国外`select`[]香港-自动`[]香港-选择`[]日本-选择`[]DIRECT`[]所有-手动`[]所有-自动`[]台湾-自动`[]日本-自动`[]新加坡-自动`[]韩国-自动`[]美国-自动`[]其他-自动`[]REJECT
+custom_proxy_group=➡️ 国内`select`[]DIRECT`[]所有-手动`[]所有-自动`[]香港-自动`[]台湾-自动`[]日本-自动`[]新加坡-自动`[]韩国-自动`[]美国-自动`[]其他-自动`[]REJECT
 ;custom_proxy_group=✨ ChatGPT`select`[]DIRECT`[]所有-手动`[]所有-自动`[]香港-自动`[]台湾-自动`[]日本-自动`[]新加坡-自动`[]韩国-自动`[]美国-自动`[]其他-自动`[]REJECT
 ;custom_proxy_group=✨ Copilot`select`[]DIRECT`[]所有-手动`[]所有-自动`[]香港-自动`[]台湾-自动`[]日本-自动`[]新加坡-自动`[]韩国-自动`[]美国-自动`[]其他-自动`[]REJECT
 ;custom_proxy_group=✨ Gemini`select`[]DIRECT`[]所有-手动`[]所有-自动`[]香港-自动`[]台湾-自动`[]日本-自动`[]新加坡-自动`[]韩国-自动`[]美国-自动`[]其他-自动`[]REJECT
 ;custom_proxy_group=✨ Claude`select`[]DIRECT`[]所有-手动`[]所有-自动`[]香港-自动`[]台湾-自动`[]日本-自动`[]新加坡-自动`[]韩国-自动`[]美国-自动`[]其他-自动`[]REJECT
-custom_proxy_group=✨ AI`select`[]DIRECT`[]所有-手动`[]所有-自动`[]香港-自动`[]台湾-自动`[]日本-自动`[]新加坡-自动`[]韩国-自动`[]美国-自动`[]其他-自动`[]REJECT
-custom_proxy_group=✨ Meta AI`select`[]DIRECT`[]所有-手动`[]所有-自动`[]香港-自动`[]台湾-自动`[]日本-自动`[]新加坡-自动`[]韩国-自动`[]美国-自动`[]其他-自动`[]REJECT
-custom_proxy_group=✨ Perplexity`select`[]DIRECT`[]所有-手动`[]所有-自动`[]香港-自动`[]台湾-自动`[]日本-自动`[]新加坡-自动`[]韩国-自动`[]美国-自动`[]其他-自动`[]REJECT
-custom_proxy_group=📘 GitHub`select`[]DIRECT`[]所有-手动`[]所有-自动`[]香港-自动`[]台湾-自动`[]日本-自动`[]新加坡-自动`[]韩国-自动`[]美国-自动`[]其他-自动`[]REJECT
-custom_proxy_group=🪂 TikTok`select`[]DIRECT`[]所有-手动`[]所有-自动`[]香港-自动`[]台湾-自动`[]日本-自动`[]新加坡-自动`[]韩国-自动`[]美国-自动`[]其他-自动`[]REJECT
-custom_proxy_group=🙋 Telegram`select`[]DIRECT`[]所有-手动`[]所有-自动`[]香港-自动`[]台湾-自动`[]日本-自动`[]新加坡-自动`[]韩国-自动`[]美国-自动`[]其他-自动`[]REJECT
-custom_proxy_group=🕊️ Twitter(X)`select`[]DIRECT`[]所有-手动`[]所有-自动`[]香港-自动`[]台湾-自动`[]日本-自动`[]新加坡-自动`[]韩国-自动`[]美国-自动`[]其他-自动`[]REJECT
-custom_proxy_group=💁 WhatsApp`select`[]DIRECT`[]所有-手动`[]所有-自动`[]香港-自动`[]台湾-自动`[]日本-自动`[]新加坡-自动`[]韩国-自动`[]美国-自动`[]其他-自动`[]REJECT
-custom_proxy_group=🗣️ Facebook`select`[]DIRECT`[]所有-手动`[]所有-自动`[]香港-自动`[]台湾-自动`[]日本-自动`[]新加坡-自动`[]韩国-自动`[]美国-自动`[]其他-自动`[]REJECT
-custom_proxy_group=🌳 Amazon`select`[]DIRECT`[]所有-手动`[]所有-自动`[]香港-自动`[]台湾-自动`[]日本-自动`[]新加坡-自动`[]韩国-自动`[]美国-自动`[]其他-自动`[]REJECT
-custom_proxy_group=🍎 Apple`select`[]DIRECT`[]所有-手动`[]所有-自动`[]香港-自动`[]台湾-自动`[]日本-自动`[]新加坡-自动`[]韩国-自动`[]美国-自动`[]其他-自动`[]REJECT
-custom_proxy_group=Ⓜ️ Microsoft`select`[]DIRECT`[]所有-手动`[]所有-自动`[]香港-自动`[]台湾-自动`[]日本-自动`[]新加坡-自动`[]韩国-自动`[]美国-自动`[]其他-自动`[]REJECT
-custom_proxy_group=🔍 Google`select`[]DIRECT`[]所有-手动`[]所有-自动`[]香港-自动`[]台湾-自动`[]日本-自动`[]新加坡-自动`[]韩国-自动`[]美国-自动`[]其他-自动`[]REJECT
-custom_proxy_group=🎮 Steam`select`[]DIRECT`[]所有-手动`[]所有-自动`[]香港-自动`[]台湾-自动`[]日本-自动`[]新加坡-自动`[]韩国-自动`[]美国-自动`[]其他-自动`[]REJECT
-custom_proxy_group=🕹️ Game`select`[]DIRECT`[]所有-手动`[]所有-自动`[]香港-自动`[]台湾-自动`[]日本-自动`[]新加坡-自动`[]韩国-自动`[]美国-自动`[]其他-自动`[]REJECT
-custom_proxy_group=🎞️ YouTube`select`[]DIRECT`[]所有-手动`[]所有-自动`[]香港-自动`[]台湾-自动`[]日本-自动`[]新加坡-自动`[]韩国-自动`[]美国-自动`[]其他-自动`[]REJECT
-custom_proxy_group=📺 Disney`select`[]DIRECT`[]所有-手动`[]所有-自动`[]香港-自动`[]台湾-自动`[]日本-自动`[]新加坡-自动`[]韩国-自动`[]美国-自动`[]其他-自动`[]REJECT
-custom_proxy_group=🎥 Netflix`select`[]DIRECT`[]所有-手动`[]所有-自动`[]香港-自动`[]台湾-自动`[]日本-自动`[]新加坡-自动`[]韩国-自动`[]美国-自动`[]其他-自动`[]REJECT
-custom_proxy_group=🎬 HBO`select`[]DIRECT`[]所有-手动`[]所有-自动`[]香港-自动`[]台湾-自动`[]日本-自动`[]新加坡-自动`[]韩国-自动`[]美国-自动`[]其他-自动`[]REJECT
-custom_proxy_group=🎵 Spotify`select`[]DIRECT`[]所有-手动`[]所有-自动`[]香港-自动`[]台湾-自动`[]日本-自动`[]新加坡-自动`[]韩国-自动`[]美国-自动`[]其他-自动`[]REJECT
-custom_proxy_group=👌 Crypto`select`[]DIRECT`[]所有-手动`[]所有-自动`[]香港-自动`[]台湾-自动`[]日本-自动`[]新加坡-自动`[]韩国-自动`[]美国-自动`[]其他-自动`[]REJECT
-custom_proxy_group=⏱️ Test`select`[]DIRECT`[]所有-手动`[]所有-自动`[]香港-自动`[]台湾-自动`[]日本-自动`[]新加坡-自动`[]韩国-自动`[]美国-自动`[]其他-自动`[]REJECT
-custom_proxy_group=🌍 国外`select`[]DIRECT`[]所有-手动`[]所有-自动`[]香港-自动`[]台湾-自动`[]日本-自动`[]新加坡-自动`[]韩国-自动`[]美国-自动`[]其他-自动`[]REJECT
-custom_proxy_group=➡️ 国内`select`[]DIRECT`[]所有-手动`[]所有-自动`[]香港-自动`[]台湾-自动`[]日本-自动`[]新加坡-自动`[]韩国-自动`[]美国-自动`[]其他-自动`[]REJECT
+custom_proxy_group=✨ AI`select`[]台湾-自动`[]DIRECT`[]所有-手动`[]所有-自动`[]香港-自动`[]日本-自动`[]新加坡-自动`[]韩国-自动`[]美国-自动`[]其他-自动`[]REJECT
+custom_proxy_group=✨ Meta AI`select`[]新加坡-自动`[]DIRECT`[]所有-手动`[]所有-自动`[]香港-自动`[]台湾-自动`[]日本-自动`[]韩国-自动`[]美国-自动`[]其他-自动`[]REJECT
+custom_proxy_group=✨ Perplexity`select`[]新加坡-自动`[]DIRECT`[]所有-手动`[]所有-自动`[]香港-自动`[]台湾-自动`[]日本-自动`[]韩国-自动`[]美国-自动`[]其他-自动`[]REJECT
+custom_proxy_group=📘 GitHub`select`[]香港-自动`[]香港-选择`[]日本-选择`[]DIRECT`[]所有-手动`[]所有-自动`[]台湾-自动`[]日本-自动`[]新加坡-自动`[]韩国-自动`[]美国-自动`[]其他-自动`[]REJECT
+custom_proxy_group=🪂 TikTok`select`[]日本-选择`[]DIRECT`[]所有-手动`[]所有-自动`[]香港-自动`[]台湾-自动`[]日本-自动`[]新加坡-自动`[]韩国-自动`[]美国-自动`[]其他-自动`[]REJECT
+custom_proxy_group=🙋 Telegram`select`[]香港-自动`[]香港-选择`[]日本-选择`[]DIRECT`[]所有-手动`[]所有-自动`[]台湾-自动`[]日本-自动`[]新加坡-自动`[]韩国-自动`[]美国-自动`[]其他-自动`[]REJECT
+custom_proxy_group=🕊️ Twitter(X)`select`[]日本-选择`[]DIRECT`[]所有-手动`[]所有-自动`[]香港-自动`[]台湾-自动`[]日本-自动`[]新加坡-自动`[]韩国-自动`[]美国-自动`[]其他-自动`[]REJECT
+custom_proxy_group=💁 WhatsApp`select`[]美国-自动`[]香港-选择`[]日本-选择`[]DIRECT`[]所有-手动`[]所有-自动`[]香港-自动`[]台湾-自动`[]日本-自动`[]新加坡-自动`[]韩国-自动`[]其他-自动`[]REJECT
+custom_proxy_group=🗣️ Facebook`select`[]香港-选择`[]日本-选择`[]香港-自动`[]DIRECT`[]所有-手动`[]所有-自动`[]台湾-自动`[]日本-自动`[]新加坡-自动`[]韩国-自动`[]美国-自动`[]其他-自动`[]REJECT
+custom_proxy_group=🌳 Amazon`select`[]香港-自动`[]香港-选择`[]日本-选择`[]DIRECT`[]所有-手动`[]所有-自动`[]台湾-自动`[]日本-自动`[]新加坡-自动`[]韩国-自动`[]美国-自动`[]其他-自动`[]REJECT
+custom_proxy_group=🍎 Apple`select`[]香港-自动`[]香港-选择`[]日本-选择`[]DIRECT`[]所有-手动`[]所有-自动`[]台湾-自动`[]日本-自动`[]新加坡-自动`[]韩国-自动`[]美国-自动`[]其他-自动`[]REJECT
+custom_proxy_group=Ⓜ️ Microsoft`select`[]DIRECT`[]香港-自动`[]香港-选择`[]日本-选择`[]台湾-自动`[]所有-手动`[]所有-自动`[]日本-自动`[]新加坡-自动`[]韩国-自动`[]美国-自动`[]其他-自动`[]REJECT
+custom_proxy_group=🔍 Google`select`[]香港-自动`[]香港-选择`[]日本-选择`[]DIRECT`[]所有-手动`[]所有-自动`[]台湾-自动`[]日本-自动`[]新加坡-自动`[]韩国-自动`[]美国-自动`[]其他-自动`[]REJECT
+custom_proxy_group=🎮 Steam`select`[]香港-自动`[]香港-选择`[]日本-选择`[]DIRECT`[]所有-手动`[]所有-自动`[]台湾-自动`[]日本-自动`[]新加坡-自动`[]韩国-自动`[]美国-自动`[]其他-自动`[]REJECT
+custom_proxy_group=🕹️ Game`select`[]台湾-自动`[]DIRECT`[]所有-手动`[]所有-自动`[]香港-自动`[]日本-自动`[]新加坡-自动`[]韩国-自动`[]美国-自动`[]其他-自动`[]REJECT
+custom_proxy_group=🎞️ YouTube`select`[]香港-选择`[]香港-自动`[]日本-选择`[]DIRECT`[]所有-手动`[]所有-自动`[]香港-自动`[]台湾-自动`[]日本-自动`[]新加坡-自动`[]韩国-自动`[]美国-自动`[]其他-自动`[]REJECT
+custom_proxy_group=📺 Disney`select`[]新加坡-自动`[]DIRECT`[]所有-手动`[]所有-自动`[]香港-自动`[]台湾-自动`[]日本-自动`[]韩国-自动`[]美国-自动`[]其他-自动`[]REJECT
+custom_proxy_group=🎥 Netflix`select`[]新加坡-自动`[]DIRECT`[]所有-手动`[]所有-自动`[]香港-自动`[]台湾-自动`[]日本-自动`[]韩国-自动`[]美国-自动`[]其他-自动`[]REJECT
+custom_proxy_group=🎬 HBO`select`[]新加坡-自动`[]DIRECT`[]所有-手动`[]所有-自动`[]香港-自动`[]台湾-自动`[]日本-自动`[]韩国-自动`[]美国-自动`[]其他-自动`[]REJECT
+custom_proxy_group=🎵 Spotify`select`[]香港-选择`[]香港-自动`[]日本-选择`[]DIRECT`[]所有-手动`[]所有-自动`[]台湾-自动`[]日本-自动`[]新加坡-自动`[]韩国-自动`[]美国-自动`[]其他-自动`[]REJECT
+custom_proxy_group=👌 Crypto`select`[]香港-选择`[]香港-自动`[]日本-选择`[]DIRECT`[]所有-手动`[]所有-自动`[]台湾-自动`[]日本-自动`[]新加坡-自动`[]韩国-自动`[]美国-自动`[]其他-自动`[]REJECT
+custom_proxy_group=⏱️ Test`select`[]香港-选择`[]香港-自动`[]日本-选择`[]DIRECT`[]所有-手动`[]所有-自动`[]台湾-自动`[]日本-自动`[]新加坡-自动`[]韩国-自动`[]美国-自动`[]其他-自动`[]REJECT
+
 
 ;3、节点组
 custom_proxy_group=所有-手动`select`.*
